--- a/src/app/auth/register/register-user/register-user.page.html
+++ b/src/app/auth/register/register-user/register-user.page.html
@@ -49,12 +49,14 @@
                         </mat-expansion-panel-header>
 
                         <mat-form-field>
-                            <input matInput placeholder="Name" [(ngModel)]="registrationDetail.guardian.name" name="guardianName" required>
+                            <input matInput placeholder="Name" [(ngModel)]="registrationDetail.guardian.name"
+                                name="guardianName" required>
                         </mat-form-field>
 
                         <mat-form-field>
                             <span matPrefix>+91 &nbsp;</span>
-                            <input matInput placeholder="Contact No" [(ngModel)]="registrationDetail.guardian.contactNo" name="guardianContactNo" required>
+                            <input matInput placeholder="Contact No" [(ngModel)]="registrationDetail.guardian.contactNo"
+                                name="guardianContactNo" required>
                         </mat-form-field>
                         <mat-action-row>
                             <button mat-button color="primary" (click)="nextStep()">Next</button>
@@ -72,24 +74,32 @@
                         </mat-expansion-panel-header>
 
                         <mat-form-field>
-                            <input matInput placeholder="First Name" [(ngModel)]="registrationDetail.userDetail.userInfo.firstName" name="userFirstName" required>
+                            <input matInput placeholder="First Name"
+                                [(ngModel)]="registrationDetail.userDetail.userInfo.firstName" name="userFirstName"
+                                required>
                         </mat-form-field>
                         <mat-form-field>
-                            <input matInput placeholder="Last Name" [(ngModel)]="registrationDetail.userDetail.userInfo.lastName" name="userLastName"  required>
+                            <input matInput placeholder="Last Name"
+                                [(ngModel)]="registrationDetail.userDetail.userInfo.lastName" name="userLastName"
+                                required>
                         </mat-form-field>
                         <mat-form-field class="dob-container">
-                            <input matInput [matDatepicker]="dateOfBirthpicker" placeholder="Date of Birth" [(ngModel)]="registrationDetail.userDetail.userInfo.dob" name="userDob" required>
+                            <input matInput [matDatepicker]="dateOfBirthpicker" placeholder="Date of Birth"
+                                [(ngModel)]="registrationDetail.userDetail.userInfo.dob" name="userDob" required>
                             <mat-datepicker-toggle matSuffix [for]="dateOfBirthpicker"></mat-datepicker-toggle>
                             <mat-datepicker #dateOfBirthpicker></mat-datepicker>
                         </mat-form-field>
 
                         <mat-form-field class='contact-detail-container'>
                             <span matPrefix>+91 &nbsp;</span>
-                            <input matInput placeholder="Contact No" [(ngModel)]="registrationDetail.userDetail.userInfo.contactNo" name="userContactNo" required>
+                            <input matInput placeholder="Contact No"
+                                [(ngModel)]="registrationDetail.userDetail.userInfo.contactNo" name="userContactNo"
+                                required>
                         </mat-form-field>
                         <section class="gender-section">
                             <label class="gender-label">Sex : </label>
-                            <mat-radio-group  [(ngModel)]="registrationDetail.userDetail.userInfo.gender" name="userGender">
+                            <mat-radio-group [(ngModel)]="registrationDetail.userDetail.userInfo.gender"
+                                name="userGender">
                                 <mat-radio-button class="gender-radio" value="male">
                                     Male
                                 </mat-radio-button>
@@ -99,21 +109,30 @@
                             </mat-radio-group>
                         </section>
                         <mat-form-field class="email-container">
-                            <input matInput placeholder="Email Id" [(ngModel)]="registrationDetail.userDetail.userInfo.emailId" name="userEmailId" required>
+                            <input matInput placeholder="Email Id"
+                                [(ngModel)]="registrationDetail.userDetail.userInfo.emailId" name="userEmailId"
+                                required>
                         </mat-form-field>
                         <section class="address-section">
                             <mat-form-field class="address-container address">
-                                <textarea matInput placeholder="Address" [(ngModel)]="registrationDetail.userDetail.userInfo.addressDetails.address" name="userAddress" required></textarea>
+                                <textarea matInput placeholder="Address"
+                                    [(ngModel)]="registrationDetail.userDetail.userInfo.addressDetails.address"
+                                    name="userAddress" required></textarea>
                             </mat-form-field>
                             <mat-form-field class="address-container city">
-                                <input matInput placeholder="City" [(ngModel)]="registrationDetail.userDetail.userInfo.addressDetails.city" name="userCity" required>
+                                <input matInput placeholder="City"
+                                    [(ngModel)]="registrationDetail.userDetail.userInfo.addressDetails.city"
+                                    name="userCity" required>
                             </mat-form-field>
                             <mat-form-field class="address-container state">
-                                <input matInput placeholder="State" [(ngModel)]="registrationDetail.userDetail.userInfo.addressDetails.state" name="userState" required>
+                                <input matInput placeholder="State"
+                                    [(ngModel)]="registrationDetail.userDetail.userInfo.addressDetails.state"
+                                    name="userState" required>
                             </mat-form-field>
                             <mat-form-field class="address-container pincode">
-                                <input matInput #postalCode maxlength="6" placeholder="Postal Code" value="560102" [(ngModel)]="registrationDetail.userDetail.userInfo.addressDetails.pincode" name="userPincode"
-                                    required>
+                                <input matInput #postalCode maxlength="6" placeholder="Postal Code" value="560102"
+                                    [(ngModel)]="registrationDetail.userDetail.userInfo.addressDetails.pincode"
+                                    name="userPincode" required>
                                 <mat-hint align="end">{{postalCode.value.length}} / 6</mat-hint>
                             </mat-form-field>
                         </section>
@@ -128,18 +147,19 @@
                             <mat-panel-title>
                                 Emargency Contact Detail
                             </mat-panel-title>
-                            <!-- <mat-panel-description>
-                                    Type your name and age
-                                </mat-panel-description> -->
                         </mat-expansion-panel-header>
 
                         <mat-form-field>
-                            <input matInput placeholder="Name" [(ngModel)]="registrationDetail.emargencyContactDetail.name" name="emargencyContactName" required>
+                            <input matInput placeholder="Name"
+                                [(ngModel)]="registrationDetail.emargencyContactDetail.name" name="emargencyContactName"
+                                required>
                         </mat-form-field>
 
                         <mat-form-field>
                             <span matPrefix>+91 &nbsp;</span>
-                            <input matInput placeholder="Contact No" [(ngModel)]="registrationDetail.emargencyContactDetail.contactNo" name="emargencyContactNo" required>
+                            <input matInput placeholder="Contact No"
+                                [(ngModel)]="registrationDetail.emargencyContactDetail.contactNo"
+                                name="emargencyContactNo" required>
                         </mat-form-field>
                         <mat-action-row>
                             <button mat-button color="warn" (click)="prevStep()">Previous</button>
@@ -154,7 +174,7 @@
                     <label class="message">Already have a account?</label>
                 </div>
                 <button mat-raised-button color="primary" class="login-button" (click)="login()">Login</button>
-                
+
             </mat-card-actions>
         </mat-card>
     </form>
